--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="date">Thursday 10 January 2020</div>
       </section>
       <div class="current">
-        <div class="temp">15<span>°c</span></div>
+        <div class="temp">15<span>°F</span></div>
         <div class="weather">Sunny</div>
-        <div class="hi-low">13°c / 16°c</div>
+        <div class="hi-low">13°F / 16°F</div>
       </div>
     </main>
   </div>
