--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">Northampton, GB</div>
-        <div class="date">Thursday 10 January 2020</div>
+        <div class="city"></div>
+        <div class="date"></div>
       </section>
       <div class="current">
-        <div class="temp">15<span>°F</span></div>
-        <div class="weather">Sunny</div>
-        <div class="hi-low">13°F / 16°F</div>
+        <div class="temp"><span></span></div>
+        <div class="weather"></div>
+        <div class="hi-low"></div>
       </div>
     </main>
   </div>
